Clean up a little, add trash svg

--- a/application/res/res.qrc
+++ b/application/res/res.qrc
@@ -10,5 +10,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>img/wifi.svg</file>
         <file>qml/TypeSelectionMenu.qml</file>
+        <file>img/trash.svg</file>
     </qresource>
 </RCC>
