Add a settings menu for smart devices

--- a/application/res/res.qrc
+++ b/application/res/res.qrc
@@ -12,5 +12,6 @@
         <file>qml/TypeSelectionMenu.qml</file>
         <file>img/trash.svg</file>
         <file>img/pencil.svg</file>
+        <file>qml/SmartDeviceSettingsMenu.qml</file>
     </qresource>
 </RCC>
