Create a loader object to load qml subtrees at will

--- a/application/res/res.qrc
+++ b/application/res/res.qrc
@@ -14,5 +14,7 @@
         <file>img/plus.png</file>
         <file>img/trash.png</file>
         <file>img/Wireless-icon.png</file>
+        <file>qml/ComplexSmartButton.qml</file>
+        <file>qml/SmartSensor.qml</file>
     </qresource>
 </RCC>
