--- a/application/res/res.qrc
+++ b/application/res/res.qrc
@@ -16,5 +16,7 @@
         <file>img/Wireless-icon.png</file>
         <file>qml/ComplexSmartButton.qml</file>
         <file>qml/SmartSensor.qml</file>
+        <file>qml/SmartSensorSettingsMenu.qml</file>
+        <file>img/tempSensor.png</file>
     </qresource>
 </RCC>
