--- a/application/res/res.qrc
+++ b/application/res/res.qrc
@@ -22,5 +22,13 @@
         <file>qml/RGBSettingsMenu.qml</file>
         <file>qml/RGBDevice.qml</file>
         <file>qml/SettingsMenuButtons.qml</file>
+        <file>qml/ColorWheel.qml</file>
+        <file>qml/colorWheelInformation/CheckerBoard.qml</file>
+        <file>qml/colorWheelInformation/ColorUtils.js</file>
+        <file>qml/colorWheelInformation/mathUtils.js</file>
+        <file>qml/colorWheelInformation/NumberBox.qml</file>
+        <file>qml/colorWheelInformation/PanelBorder.qml</file>
+        <file>qml/colorWheelInformation/VerticalSlider.qml</file>
+        <file>qml/colorWheelInformation/Wheel.qml</file>
     </qresource>
 </RCC>
